@@ -244,13 +244,15 @@ ifeq ($(TARGET_OS),darwin)
 NASMFLAGS=-f macho
 CPUFLAGS=
 # require 10.5 for 64 bit builds
-ifeq ($(MACH_TYPE),x86_64)
-CFLAGS  +=-mmacosx-version-min=10.5
-LDFLAGS +=-mmacosx-version-min=10.5
-endif
 ifeq ($(MACH_TYPE),ppc64)
 CFLAGS  +=-mmacosx-version-min=10.5
 LDFLAGS +=-mmacosx-version-min=10.5
+endif
+ifeq ($(MACH_TYPE),x86_64)
+# require 10.6 for amd64 builds, not 10.5 (SDL's requirement.)
+# bundle1.o is needed for dyld_stub_binding_helper
+CFLAGS  +=-mmacosx-version-min=10.6
+LDFLAGS +=-mmacosx-version-min=10.6 -Wl,-lbundle1.o
 endif
 
 # no need for timidity, we have a midi driver
